# Python-Ai

./: github_model.py  main.py  notebook.py  openai_client.py  pyproject.toml  structure_test.py  test.py  test2.py  test3.py
